--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -40,10 +40,13 @@
         .discDescriptionMyCourses:not([data-enabled="1"]){
             display: none;
         }
-
-        /*[data-template="excellencePro"] .colDiscNames {
+        [data-template="excellencePro"] .discDescriptionMyCourses {
             display: none;
-        }*/
+        }
+
+        [data-template="excellencePro"] .colDiscNames {
+            display: none;
+        }
 
         @media screen and (max-width: 1600px) {
             [data-template="afadec"] .colCoursContent {
