--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -51,7 +51,11 @@
                                 src="https://player.vimeo.com/video/123835230"></iframe>
 
                 {% elseif template == "excellencePro" %}
-                    <img style="max-width: 100%;" src="{{ asset('images/accueil/excellencePro.jpg') }}" />
+                    <video controls poster="{{ asset('images/accueil/excellencePro.jpg') }}" style="width: 100%">
+                        <source src="{{ asset('images/accueil/generique_excellence.mp4') }}" type="video/mp4">
+                        <img style="max-width: 100%;" src="{{ asset('images/accueil/excellencePro.jpg') }}" />
+                    </video>
+
                 {% endif %}
             </div>
             {% if template == "afadec" %}
