--- a/app/Resources/views/cours/adminH5p.html.twig
+++ b/app/Resources/views/cours/adminH5p.html.twig
@@ -37,7 +37,7 @@
         <hr class="hrCourseElem"/>
         <div class="row text-center">
             {% if h5piscontent == true %}
-                {% if h5p != null %}
+                {% if h5p.h5p != null %}
                     {% if isFrame %}
                         <div class="h5p-iframe-wrapper">
                             <iframe id="h5p-iframe-{{ h5p.h5p }}" class="h5p-iframe"
