--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -175,17 +175,22 @@
                         </li>
                         <li><a href="{{ path('myCourses') }}">Les cours</a></li>
                     {% elseif template == 'excellencePro' %}
-                        <li><a href="#">Infos pratiques</a>
+                        <li><a href="#">Le salon</a>
                             <ul class="sub-menu">                                    <!-- Sub Menu -->
                                 <li><a target="_blank"
                                        href="https://enseignement-catholique.fr/wp-content/uploads/2019/10/EXCELLENCE-PRO-Plaquette-3-volets-BD-Page-par-page.pdf">Présentation</a>
                                 </li>
                                 <li><a href="https://enseignement-catholique.fr/les-actus-du-salon/">Newsletter</a></li>
-                                <li><a href="{{ path('concours') }}">Concours</a></li>
-                                <li><a href="{{ path('faq') }}">FAQ</a></li>
-                                <li><a href="{{ path('metierEnseignant') }}">Le métier d'enseignant</a></li>
-                                <li><a href="{{ path('inscription') }}">Comment s'inscrire ?</a></li>
-                                <li><a href="{{ path('cookies') }}">Cookies</a></li>
+                                <li>
+                                    <a href="#">Infos pratiques</a>
+                                    {#<ul class="sub-menu" style="margin-left: -400px;">
+                                        <li><a href="{{ path('concours') }}">Concours</a></li>
+                                        <li><a href="{{ path('faq') }}">FAQ</a></li>
+                                        <li><a href="{{ path('metierEnseignant') }}">Le métier d'enseignant</a></li>
+                                        <li><a href="{{ path('inscription') }}">Comment s'inscrire ?</a></li>
+                                        <li><a href="{{ path('cookies') }}">Cookies</a></li>
+                                    </ul>#}
+                                </li>
                             </ul>
                         </li>
                         {% if app.user %}
