--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -31,15 +31,18 @@
             display: inline-block;
         }
 
-        .course-list:not([data-enabled="1"]){
+        .course-list:not([data-enabled="1"]) {
             opacity: .6;
         }
-        .discDescriptionMyCourses{
+
+        .discDescriptionMyCourses {
             margin-top: 0 !important;
         }
-        .discDescriptionMyCourses:not([data-enabled="1"]){
+
+        .discDescriptionMyCourses:not([data-enabled="1"]) {
             display: none;
         }
+
         [data-template="excellencePro"] .discDescriptionMyCourses {
             display: none;
         }
@@ -214,9 +217,12 @@
                             <div class="container mt-0 mb-60">
                                 <div class="row">
                                     <div class="colCoursContent {% if template == 'excellencePro' %}col-sm-12{% elseif template == 'afadec' %}col-sm-8{% endif %}">
-                                        <div class="course-list discDescriptionMyCourses" data-enabled="{% if val.discipline.description is not null and val.discipline.description is not empty %}1{% else %}0{% endif %}">
+                                        <div class="course-list discDescriptionMyCourses"
+                                             data-enabled="{% if val.discipline.description is not null and val.discipline.description is not empty %}1{% else %}0{% endif %}">
                                             <div class="course-detail">
-                                                <h4 class="heading"><i class="fa fa-info-circle" aria-hidden="true"></i> {{ val.discipline.nom }}</h4>
+                                                <h4 class="heading"><i class="fa fa-info-circle"
+                                                                       aria-hidden="true"></i> {{ val.discipline.nom }}
+                                                </h4>
                                                 {{ val.discipline.description|raw }}
                                             </div>
                                         </div>
@@ -294,8 +300,10 @@
                                                         <div class="course-detail">
                                                             <h4 class="heading">{{ valC.nom }}</h4>
                                                             <ul class="course-features">
-                                                                <li><i class="fa fa-map-marker"></i> À distance</li>
-                                                                <br/>
+                                                                {% if valC.aDistance %}
+                                                                    <li><i class="fa fa-map-marker"></i> À distance</li>
+                                                                    <br/>
+                                                                {% endif %}
                                                                 {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
                                                                     <li>
                                                                         <i class="fa fa-hourglass-start"></i> {{ valC.session.dateDebut|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}
@@ -335,8 +343,10 @@
                                                         <div class="course-detail">
                                                             <h4 class="heading">{{ valC.nom }}</h4>
                                                             <ul class="course-features">
-                                                                <li><i class="fa fa-map-marker"></i> À distance</li>
-                                                                <br/>
+                                                                {% if valC.aDistance %}
+                                                                    <li><i class="fa fa-map-marker"></i> À distance</li>
+                                                                    <br/>
+                                                                {% endif %}
                                                                 {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
                                                                     <li>
                                                                         <i class="fa fa-hourglass-start"></i> {{ valC.session.dateDebut|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}
@@ -378,8 +388,10 @@
                                                         <div class="course-detail">
                                                             <h4 class="heading">{{ valC.nom }}</h4>
                                                             <ul class="course-features">
-                                                                <li><i class="fa fa-map-marker"></i> À distance</li>
-                                                                <br/>
+                                                                {% if valC.aDistance %}
+                                                                    <li><i class="fa fa-map-marker"></i> À distance</li>
+                                                                    <br/>
+                                                                {% endif %}
                                                                 <li>
                                                                     <i class="fa fa-hourglass-start"></i> {{ valC.session.dateDebut|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}
                                                                 </li>
@@ -411,8 +423,10 @@
                                                         <div class="course-detail">
                                                             <h4 class="heading">{{ valC.nom }}</h4>
                                                             <ul class="course-features">
-                                                                <li><i class="fa fa-map-marker"></i> À distance</li>
-                                                                <br/>
+                                                                {% if valC.aDistance %}
+                                                                    <li><i class="fa fa-map-marker"></i> À distance</li>
+                                                                    <br/>
+                                                                {% endif %}
                                                                 <li>
                                                                     <i class="fa fa-hourglass-start"></i> {{ valC.session.dateDebut|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}
                                                                 </li>
@@ -434,10 +448,12 @@
                                                     </div>
                                                     <div class="course-detail">
                                                         <h4 class="heading">{{ valC.nom }}</h4>
-                                                        <ul class="course-features">
-                                                            <li><i class="fa fa-map-marker"></i> À distance</li>
-                                                            <!--<li><i class="fa fa-clock-o"></i> 2 mois</li>-->
-                                                        </ul>
+                                                        {% if valC.aDistance %}
+                                                            <ul class="course-features">
+                                                                <li><i class="fa fa-map-marker"></i> À distance</li>
+                                                                <!--<li><i class="fa fa-clock-o"></i> 2 mois</li>-->
+                                                            </ul>
+                                                        {% endif %}
                                                         <p class="brief">{{ valC.description|raw }}</p>
                                                         <a href="{{ path('oneCours', {id: valC.id, mode: 'etu'}) }}"
                                                            class="btn btn-primary btn-sm">Entrer</a>
