--- a/app/Resources/views/user/myProfile.html.twig
+++ b/app/Resources/views/user/myProfile.html.twig
@@ -189,8 +189,7 @@
         <div class="blocRGPD block">
             <div class="sectionRGPD">
                 Soucieuse de protéger la vie privée de ses utilisateurs, l’Association pour la formation à distance de l’Enseignement catholique, AFADEC s’engage dans la protection des données personnelles.
-                <a href="{{ asset('images/RGPD/charte_RGPD.pdf') }}">La présente Charte</a> a pour objet de rappeler nos principes et nos actions visant au respect de la réglementation applicable en matière de protection des données à caractère personnel.
-                <div class="text-center"><a href="{{ asset('images/RGPD/charte_RGPD.pdf') }}"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></div>
+                <a class="linkCharte" href="{{ asset('images/RGPD/charte_RGPD.pdf') }}">La présente Charte <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a> a pour objet de rappeler nos principes et nos actions visant au respect de la réglementation applicable en matière de protection des données à caractère personnel.
             </div>
             <!--<div class="btnDeleteDatas btn btn-warning" data-typeDatas="ALL">Supprimer mes données</div>-->
             <div class="myRGPDdatas">
