--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -555,7 +555,7 @@
             {% if systemResas|length > 0 %}
                 <div class="row mt-20">
                     <div class="col-sm-12">
-                        <h4 class="heading">Réservation de plage horaire</h4>
+                        <!--<h4 class="heading">Réservation de plage horaire</h4>-->
                         {% for system in systemResas %}
                             <div class="resa-system" data-idSystem="{{ system.id }}">
                                 <div class="resa-groupResaNom">
