--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -1394,6 +1394,13 @@
                 $('#ressourcesAdmin a').click();
             }
 
+            /*
+    steps: '../'
+    upload_srcSteps: '../'
+    folderLocation: 'var/upload/'
+    upload_course: '../../'
+             */
+
             // upload d'un fichier pour un lien
             function uploadLinkFile(lienId, refresh, idSection) {
                 let coursId = $('[data-coursId]').attr('data-coursId');
@@ -1405,7 +1412,7 @@
 
                 // si le folder n'existe pas, on le créé
                 let url = steps + folderLocation + coursId + '/lien/' + lienId + '/';
-
+                console.log(url)
                 $.ajax({
                     type: 'POST',
                     url: "{{ path('checkDirForUploadFile_ajax') }}",
@@ -1439,7 +1446,7 @@
                     '</div>'
                 );
 
-
+                console.log(steps + upload_srcSteps + upload_course + folderLocation)
                 $('#itemUpload').fileupload({
                     url: steps + upload_srcSteps + upload_course + folderLocation,
                     dropZone: null,
