--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -180,6 +180,9 @@
                                 <li><a target="_blank"
                                        href="https://enseignement-catholique.fr/wp-content/uploads/2019/10/EXCELLENCE-PRO-Plaquette-3-volets-BD-Page-par-page.pdf">Présentation</a>
                                 </li>
+                                <li><a target="_blank"
+                                       href="https://youtu.be/xxKc8G6S1jg">Présentation vidéo</a>
+                                </li>
                                 <li><a href="https://enseignement-catholique.fr/les-actus-du-salon/">Newsletter</a></li>
                                 <li>
                                     <a href="#">Infos pratiques</a>
