--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -44,7 +44,7 @@
     {% elseif template == "afadec" %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico?v=4') }}"/>
     {% elseif template == "excellencePro" %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('faviconXP.ico?v=4') }}"/>
+        <link rel="icon" type="image/x-icon" href="{{ asset('faviconEXPro.ico?v=5') }}"/>
     {% endif %}
 
     {% block javascripts %}
