--- a/app/Resources/views/user/registrationMail.txt.twig
+++ b/app/Resources/views/user/registrationMail.txt.twig
@@ -1,12 +1,12 @@
 Votre compte est bien créé !
 
-Bonjour {{ prenom }} {{ nom }}! Votre compte est bien créé.
-Pour l'activer, veuillez suivre l'URL suivante : {{ url }}/{{ id }}
+Bonjour {{ user.firstname }} {{ user.lastname }}! Votre compte est bien créé.
+Pour l'activer, veuillez suivre l'URL suivante : {{ url }}
 
 Vous pourrez ensuite vous authentifier sur la page : {{ urlLogin }}
 
-{% if not confirmedByAdmin %}
-    Attention ! Vous avez choisi un statut {{ statut }}.
+{% if not user.confirmedByAdmin %}
+    Attention ! Vous avez choisi un statut {{ user.statut }}.
     Ce statut vous donne droit à des fonctionnalités supplémentaires. Elles seront actives lorsque l'administrateur de l'AFADEC aura confirmé votre compte. Vous serez averti dans les 24h de cette confirmation.
 {% endif %}
 
