--- a/app/Resources/views/user/registrationMail.txt.twig
+++ b/app/Resources/views/user/registrationMail.txt.twig
@@ -1,7 +1,8 @@
+-
 Votre compte est bien créé !
 
 Bonjour {{ user.firstname }} {{ user.lastname }}! Votre compte est bien créé.
-Pour l'activer, veuillez suivre l'URL suivante : {{ url }}
+Pour l'activer, veuillez suivre l'URL suivante : {{ url }}/{{ user.id }}
 
 Vous pourrez ensuite vous authentifier sur la page : {{ urlLogin }}
 
