--- a/app/Resources/views/user/registrationMail.html.twig
+++ b/app/Resources/views/user/registrationMail.html.twig
@@ -1,4 +1,4 @@
-<h3>- Votre compte est bien créé !</h3>
+<h3>Votre compte est bien créé !</h3>
 
 <p>Bonjour {{ user.firstname }} {{ user.lastname }}! Votre compte est bien créé.</p>
 <p>Pour l'activer, veuillez cliquer sur ce lien : <a href="{{ url }}/{{ user.id }}">Lien d'activation</a>
