--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -193,7 +193,7 @@
                                 </li>
                                 <li><a href="https://enseignement-catholique.fr/les-actus-du-salon/">Newsletter</a></li>
                                 <li>
-                                    <a href="#">Infos pratiques</a>
+                                    <a href="{{ path('infosPratiques') }}">Infos pratiques</a>
                                     {#<ul class="sub-menu" style="margin-left: -400px;">
                                         <li><a href="{{ path('concours') }}">Concours</a></li>
                                         <li><a href="{{ path('faq') }}">FAQ</a></li>
