--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -669,7 +669,7 @@
                                                             <div class="itemTitle">{{ valR.nom }}</div>
                                                             <div class="itemDescription">{{ valR.description | raw }}</div>
                                                             {% if '.mp4' in valR.url %}
-                                                                <video style="max-width: 600px;" controls>
+                                                                <video style="max-width: 600px;" controls preload="none">
                                                                     <source src="{{ valR.url }}" type="video/mp4">
                                                                     Votre navigateur ne supporte pas la balise "video".
                                                                 </video>
