--- a/app/Resources/views/user/add.html.twig
+++ b/app/Resources/views/user/add.html.twig
@@ -176,7 +176,7 @@
     <script src="{{ asset('vendors/jquery-ui/jquery-ui.min.js') }}" type=text/javascript></script>
     <script>
         jQuery(document).ready(function () {
-            $('.dependOnType').hide();
+            //$('.dependOnType').hide();
             $('label').addClass('col-sm-4');
 
             if ($('#form_mdp_first').parent().find('ul').length) {
@@ -223,8 +223,11 @@
                 $('.dependOnType input[type="text"]').each(function(){
                     $(this).val('');
                 });
-                if ($(this).val() === '0') {
+                if ($(this).val() === '3') {
                     $('.dependOnType').hide();
+                    $('.dependOnType input[type="text"]').each(function(){
+                        $(this).val(' ');
+                    });
                 } else {
                     $('.dependOnType').show();
                 }
@@ -364,6 +367,13 @@
                         </div>
                     {% elseif template == 'excellencePro' %}
                         <div class="formRow dependOnType">
+                            {{ form_label(form.numec) }}{{ form_widget(form.numec) }}
+                        </div>
+                        <div class="dependOnType row" style="width: 600px;">
+                            <div style="width: 300px; height: 30px" class="col-sm-4">   </div>
+                            <div style="width: 300px; padding-right: 0; font-size: 12px; font-weight: bold;" class="col-sm-8">Le NUMEC est votre numéro d’identification de l’enseignement catholique. Il est différent du NUMEN. Si vous ne le connaissez pas, demandez le à votre chef d’établissement. </div>
+                        </div>
+                        <div class="formRow dependOnType">
                             {{ form_label(form.nomEtabl) }}{{ form_widget(form.nomEtabl) }}
                         </div>
                         <div class="formRow dependOnType">
@@ -371,6 +381,9 @@
                         </div>
                         <div class="formRow dependOnType">
                             {{ form_label(form.codePost) }}{{ form_widget(form.codePost) }}
+                        </div>
+                        <div class="formRow dependOnType">
+                            {{ form_label(form.uai) }}{{ form_widget(form.uai) }}
                         </div>
                     {% endif %}
                     <div class="formRow center btnSubmitZone">
